--- a/client/index.html
+++ b/client/index.html
@@ -1,36 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Primary Meta Tags -->
-  <title>Best Construction Services in London | HNV Building</title>
-  <meta name="description" content="Top-rated construction company in London offering renovation, home improvement, and commercial services. Get a free quote from HNV Building." />
-  <meta name="keywords" content="construction services London, home renovation, HNV Building, house extensions, remodeling London, commercial construction" />
-  <meta name="author" content="HNV Building" />
+  <!-- Primary SEO Meta -->
+  <title>Construction Services in London | Renovation & Extensions | HNV Building</title>
+  <meta name="description" content="HNV Building offers trusted construction, renovation, and home improvement services across London. Contact us for house extensions, remodeling, and commercial projects." />
+  <meta name="keywords" content="construction London, renovation services, home improvement London, HNV Building, house extensions, remodeling, commercial construction" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://hnvbuilding.co.uk/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://hnvbuilding.co.uk/" />
-  <meta property="og:title" content="Best Construction Services in London | HNV Building" />
-  <meta property="og:description" content="London's trusted construction and renovation company. Request your free quote today." />
+  <meta property="og:title" content="Trusted Construction & Renovation Services in London | HNV Building" />
+  <meta property="og:description" content="We provide reliable construction, renovation, and commercial building services in London. Get your free quote today." />
   <meta property="og:image" content="https://hnvbuilding.co.uk/images/cover.jpg" />
 
-  <!-- Twitter Meta Tags -->
+  <!-- Twitter Meta -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://hnvbuilding.co.uk/" />
-  <meta name="twitter:title" content="Best Construction Services in London | HNV Building" />
-  <meta name="twitter:description" content="Top-rated construction and renovation company in London. Contact us today." />
+  <meta name="twitter:title" content="Construction Services in London | HNV Building" />
+  <meta name="twitter:description" content="Renovation, extensions, and commercial building services in London." />
   <meta name="twitter:image" content="https://hnvbuilding.co.uk/images/cover.jpg" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico" />
-
-  <!-- Schema.org JSON-LD Structured Data -->
+  <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -46,17 +41,30 @@
       "postalCode": "E1 6AN",
       "addressCountry": "UK"
     },
-    "description": "HNV Building provides professional construction, renovation, and home improvement services in London.",
+    "description": "Trusted construction, renovation, and home improvement services in London.",
     "priceRange": "$$",
     "openingHours": "Mo-Fr 08:00-18:00",
     "geo": {
       "@type": "GeoCoordinates",
       "latitude": "51.5074",
       "longitude": "-0.1278"
-    }
+    },
+    "serviceArea": {
+      "@type": "Place",
+      "name": "London"
+    },
+    "makesOffer": [
+      { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Home Renovation" } },
+      { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "House Extensions" } },
+      { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Commercial Construction" } }
+    ]
   }
   </script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
 </head>
+
  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
