sitemap and services updates

--- a/client/index.html
+++ b/client/index.html
@@ -9,21 +9,21 @@
   <meta name="description" content="HNV Building offers trusted construction, renovation, and home improvement services across London. Contact us for house extensions, remodeling, and commercial projects." />
   <meta name="keywords" content="construction London, renovation services, home improvement London, HNV Building, house extensions, remodeling, commercial construction" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://hnvbuilding.co.uk/" />
+  <link rel="canonical" href="https://hnv-project-frontend.onrender.com/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://hnvbuilding.co.uk/" />
+  <meta property="og:url" content="https://hnv-project-frontend.onrender.com/" />
   <meta property="og:title" content="Trusted Construction & Renovation Services in London | HNV Building" />
   <meta property="og:description" content="We provide reliable construction, renovation, and commercial building services in London. Get your free quote today." />
-  <meta property="og:image" content="https://hnvbuilding.co.uk/images/cover.jpg" />
+  <meta property="og:image" content="https://hnv-project-frontend.onrender.com/images/cover.jpg" />
 
   <!-- Twitter Meta -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://hnvbuilding.co.uk/" />
+  <meta name="twitter:url" content="https://hnv-project-frontend.onrender.com/" />
   <meta name="twitter:title" content="Construction Services in London | HNV Building" />
   <meta name="twitter:description" content="Renovation, extensions, and commercial building services in London." />
-  <meta name="twitter:image" content="https://hnvbuilding.co.uk/images/cover.jpg" />
+  <meta name="twitter:image" content="https://hnv-project-frontend.onrender.com/images/cover.jpg" />
 
   <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
@@ -31,8 +31,8 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "HNV Building",
-    "image": "https://hnvbuilding.co.uk/images/cover.jpg",
-    "url": "https://hnvbuilding.co.uk/",
+    "image": "https://hnv-project-frontend.onrender.com/images/cover.jpg",
+    "url": "https://hnv-project-frontend.onrender.com/",
     "telephone": "+44-123-456-7890",
     "address": {
       "@type": "PostalAddress",
