index file update

--- a/client/index.html
+++ b/client/index.html
@@ -5,24 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary SEO Meta -->
-  <title>Construction Services in London | Renovation & Extensions | HNV Building</title>
-  <meta name="description" content="HNV Building offers trusted construction, renovation, and home improvement services across London. Contact us for house extensions, remodeling, and commercial projects." />
-  <meta name="keywords" content="construction London, renovation services, home improvement London, HNV Building, house extensions, remodeling, commercial construction" />
+  <title>HNV Renovation & Construction Services in Preston | HNV Building</title>
+  <meta name="description" content="HNV Building provides expert renovation, home improvement, and construction services in Preston. Contact us for HNV renovation, house extensions, and commercial projects." />
+  <meta name="keywords" content="HNV Renovation, HNV Construction, construction Preston, renovation services, home improvement Preston, HNV Building, house extensions, remodeling, commercial construction" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://hnv-project-frontend.onrender.com/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://hnv-project-frontend.onrender.com/" />
-  <meta property="og:title" content="Trusted Construction & Renovation Services in London | HNV Building" />
-  <meta property="og:description" content="We provide reliable construction, renovation, and commercial building services in London. Get your free quote today." />
+  <meta property="og:title" content="HNV Renovation & Construction Services in Preston | HNV Building" />
+  <meta property="og:description" content="We provide reliable construction, renovation, and commercial building services in Preston. Get your free quote today." />
   <meta property="og:image" content="https://hnv-project-frontend.onrender.com/images/cover.jpg" />
 
   <!-- Twitter Meta -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://hnv-project-frontend.onrender.com/" />
-  <meta name="twitter:title" content="Construction Services in London | HNV Building" />
-  <meta name="twitter:description" content="Renovation, extensions, and commercial building services in London." />
+  <meta name="twitter:title" content="HNV Renovation & Construction Services in Preston | HNV Building" />
+  <meta name="twitter:description" content="Renovation, extensions, and commercial building services in Preston." />
   <meta name="twitter:image" content="https://hnv-project-frontend.onrender.com/images/cover.jpg" />
 
   <!-- Schema.org JSON-LD -->
@@ -36,22 +36,22 @@
     "telephone": "+44-123-456-7890",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "123 London Road",
-      "addressLocality": "London",
-      "postalCode": "E1 6AN",
+      "streetAddress": "123 Preston Road",
+      "addressLocality": "Preston",
+      "postalCode": "PR1 2AB",
       "addressCountry": "UK"
     },
-    "description": "Trusted construction, renovation, and home improvement services in London.",
+    "description": "Trusted construction, renovation, and home improvement services in Preston.",
     "priceRange": "$$",
     "openingHours": "Mo-Fr 08:00-18:00",
     "geo": {
       "@type": "GeoCoordinates",
-      "latitude": "51.5074",
-      "longitude": "-0.1278"
+      "latitude": "53.7632",
+      "longitude": "-2.7031"
     },
     "serviceArea": {
       "@type": "Place",
-      "name": "London"
+      "name": "Preston"
     },
     "makesOffer": [
       { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Home Renovation" } },
@@ -65,10 +65,8 @@
   <link rel="icon" href="/favicon.ico" />
 </head>
 
- <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html> 
-
-
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+</html>
