google search consol

--- a/client/index.html
+++ b/client/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="eUn5eIWk47US6kN_N5phjsQZ692KV99Z5PpLveeK7kM" />
 
   <!-- Primary SEO Meta -->
-  <title>HNV Renovation & Construction Services in Preston | HNV Building</title>
-  <meta name="description" content="HNV Building provides expert renovation, home improvement, and construction services in Preston. Contact us for HNV renovation, house extensions, and commercial projects." />
-  <meta name="keywords" content="HNV Renovation, HNV Construction, construction Preston, renovation services, home improvement Preston, HNV Building, house extensions, remodeling, commercial construction" />
+  <title>HNV Renovation & Construction Preston | Home Extensions & Renovation Services</title>
+  <meta name="description" content="HNV Building provides trusted renovation, construction, and home extension services in Preston. Contact us for quality home and commercial improvements." />
+  <meta name="keywords" content="HNV Renovation Preston, HNV Construction Preston, Home Renovation Preston, House Extensions Preston" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://hnv-project-frontend.onrender.com/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://hnv-project-frontend.onrender.com/" />
-  <meta property="og:title" content="HNV Renovation & Construction Services in Preston | HNV Building" />
-  <meta property="og:description" content="We provide reliable construction, renovation, and commercial building services in Preston. Get your free quote today." />
+  <meta property="og:title" content="HNV Renovation & Construction Preston | HNV Building" />
+  <meta property="og:description" content="Trusted renovation, construction, and home extension services in Preston. Get a free quote today!" />
   <meta property="og:image" content="https://hnv-project-frontend.onrender.com/images/cover.jpg" />
 
   <!-- Twitter Meta -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://hnv-project-frontend.onrender.com/" />
-  <meta name="twitter:title" content="HNV Renovation & Construction Services in Preston | HNV Building" />
-  <meta name="twitter:description" content="Renovation, extensions, and commercial building services in Preston." />
+  <meta name="twitter:title" content="HNV Renovation & Construction Preston | HNV Building" />
+  <meta name="twitter:description" content="Quality renovation, house extensions, and commercial construction services in Preston." />
   <meta name="twitter:image" content="https://hnv-project-frontend.onrender.com/images/cover.jpg" />
 
   <!-- Schema.org JSON-LD -->
@@ -38,10 +38,10 @@
       "@type": "PostalAddress",
       "streetAddress": "123 Preston Road",
       "addressLocality": "Preston",
-      "postalCode": "PR1 2AB",
+      "postalCode": "PR1 1AA",
       "addressCountry": "UK"
     },
-    "description": "Trusted construction, renovation, and home improvement services in Preston.",
+    "description": "HNV Building provides trusted renovation, construction, and home extension services in Preston.",
     "priceRange": "$$",
     "openingHours": "Mo-Fr 08:00-18:00",
     "geo": {
